--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -8,6 +8,7 @@ android:layout_height="match_parent" >
         android:id="@+id/slide_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         />
