--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -9,7 +9,7 @@ android:layout_height="match_parent" >
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:scaleType="fitCenter"
+        android:scaleType="centerInside"
         android:adjustViewBounds="true"
         />
 </ScrollView>
